--- a/app/src/main/res/layout/level_progress.xml
+++ b/app/src/main/res/layout/level_progress.xml
@@ -14,14 +14,11 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,25 +27,21 @@
             android:text="Level progression"
             android:padding="2dp"
             style="@style/WK.TextView.Normal.Bold"/>
-
     </TableRow>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:orientation="horizontal">
-
         <View
             android:id="@+id/legendBucket0"
             android:layout_width="8dp"
             android:layout_height="8dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginStart="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp" />
+            android:layout_gravity="center_vertical"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,68 +49,51 @@
             android:layout_gravity="center_vertical"
             android:text="Passed"
             style="@style/WK.TextView.XSmall"/>
-
-        <LinearLayout
-            android:id="@+id/apprenticeBucketContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+        <View
+            android:id="@+id/legendBucket1"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket2"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket3"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket4"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket5"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket6"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/legendBucket7"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
             android:layout_marginRight="4dp"
-            android:background="@drawable/small_rounded_corners"
-            android:layout_gravity="center_vertical">
-
-            <View
-                android:id="@+id/legendBucket1"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical"/>
-
-            <View
-                android:id="@+id/legendBucket2"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical" />
-
-            <View
-                android:id="@+id/legendBucket3"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical" />
-
-            <View
-                android:id="@+id/legendBucket4"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical" />
-
-            <View
-                android:id="@+id/legendBucket5"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical" />
-
-            <View
-                android:id="@+id/legendBucket6"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical" />
-
-            <View
-                android:id="@+id/legendBucket7"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_gravity="center_vertical"/>
-        </LinearLayout>
-
+            android:layout_marginEnd="4dp"
+            android:layout_gravity="center_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Apprentice"
             style="@style/WK.TextView.XSmall"/>
-
         <View
             android:id="@+id/legendBucket8"
             android:layout_width="8dp"
@@ -127,14 +103,12 @@
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
             android:layout_gravity="center_vertical"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Initiate"
             style="@style/WK.TextView.XSmall"/>
-
         <View
             android:id="@+id/legendBucket9"
             android:layout_width="8dp"
@@ -144,14 +118,11 @@
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
             android:layout_gravity="center_vertical"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Locked"
             style="@style/WK.TextView.XSmall"/>
-
     </LinearLayout>
-
 </merge>
